--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <title>Marion Gérard - About Me</title>
+  <title>Marion Gérard - ChooseMyCompany</title>
 </head>
 <body>
   <nav class="navbar sticky-top navbar-expand-md navbar-light">
@@ -21,17 +21,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/index.html" title="Homepage">
-            Home
+          <a class="nav-link" href="/index.html" title="Accueil">
+            Accueil
           </a>
-          <a class="nav-link" href="/work.html" title="See my work">
-            My work
+          <a class="nav-link" href="/work.html" title="Mon stage">
+            Stage
           </a>
-          <a class="nav-link active" aria-current="page" href="/about.html" title="Know more about me">
-            About Me
+          <a class="nav-link active" aria-current="page" href="/about.html" title="Mon entreprise d'accueil">
+            ChooseMyCompany
           </a>
-          <a class="nav-link" href="/about.html#contact" title="Reach out to me">
-            Contact Me
+          <a class="nav-link" href="/contact.html" title="Me contacter">
+            Contact
           </a>
         </div>
       </div>
