--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <title>Marion Gérard - Mon stage</title>
+  <title>Marion Gérard - Contact</title>
 </head>
 <body>
   <nav class="navbar sticky-top navbar-expand-md navbar-light">
@@ -24,13 +24,13 @@
           <a class="nav-link" href="/index.html" title="Accueil">
             Accueil
           </a>
-          <a class="nav-link active" aria-current="page" href="/work.html" title="Mon stage">
+          <a class="nav-link" href="/work.html" title="Mon stage">
             Stage
           </a>
-          <a class="nav-link" href="/about.html" title="Mon entreprise d'accueil">
+          <a class="nav-link" aria-current="page" href="/about.html" title="Mon entreprise d'accueil">
             ChooseMyCompany
           </a>
-          <a class="nav-link" href="/contact.html" title="Me contacter">
+          <a class="nav-link active" href="/contact.html" title="Me contacter">
             Contact
           </a>
         </div>
@@ -39,57 +39,27 @@
   </nav>
   <div class="header-home">
     <h1 class="h1-home">
-      My Work
+      About Me
     </h1>
     <h2 class="h2-home">
-      See what I have been up to
+      Learn to know me better
     </h2>
-    <a class="contact-link-home" href="/work.html#contact" title="Contact Me">
+    <a class="contact-link-home" href="/about.html#contact" title="Contact Me">
       Contact Me
     </a>
   </div>
   <br />
   <h3 class="h3-headers-home">
-    Projects
+    Who is she ?
   </h3>
   <div class="line-under-headers">
     ________________________________________________________________________
   </div>
-  <div class="container mt-4">
-  <div class="row justify-content-center">
-    <div class="project-image-work col-6">
-      <img src="/medias/cat project.png" alt="cat project" class="img-fluid rounded" title="Cat project">
-    </div>
-    <div class="project-text-work col-4">
-      <h4 class="h4-projects work">
-        Cat page
-      </h4>
-      <p class="projects-description-work">
-        A page about cats made with HTML and CSS. It was my very first project as a front-end developer.
-      </p>
-      <a class="contact-link-home work" href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="Learn about cats!">
-        Go !
-      </a>
-    </div>
-  </div>
-  <br />
-  <div class="row justify-content-center">
-    <div class="project-image-work col-6">
-      <img src="/medias/weather project.png" alt="weather project" class="img-fluid rounded" title="Weather project">
-    </div>
-    <div class="project-text-work col-4">
-      <h4 class="h4-projects work">
-        Weather application
-      </h4>
-      <p class="projects-description-work">
-        A weather tool to know what's the weather gonna be. It's made using HTML, CSS, Bootstrap, Javascript and API.
-      </p>
-      <a class="contact-link-home work" href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See the weather forecast">
-        Go !
-      </a>
-    </div>
-  </div>
-  </div>
+  <p class="paragraph-about-me">
+    My name is Marion. I am a front-end developer from France that loves traveling and coding.
+    I started learning to code with SheCodes back in October 2021 and fell in love with it.
+    I also have a bachelor in Languages and Business and I speak French, English and Spanish.
+  </p>
   <br />
   <h3 class="h3-headers-home" id="contact">
     Reach out to me!
