--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">
-            Home
+          <a class="nav-link active" aria-current="page" href="/index.html" title="Accueil">
+            Accueil
           </a>
-          <a class="nav-link" href="/work.html" title="See my work">
-            My work
+          <a class="nav-link" href="/work.html" title="Mon stage">
+            Stage
           </a>
-          <a class="nav-link" href="/about.html" title="Know more about me">
-            About Me
+          <a class="nav-link" href="/about.html" title="Mon entreprise d'accueil">
+            ChooseMyCompany
           </a>
-          <a class="nav-link" href="/index.html#contact" title="Reach out to me">
-            Contact Me
+          <a class="nav-link" href="/contact.html" title="Me contacter">
+            Contact
           </a>
         </div>
       </div>
@@ -44,8 +44,8 @@
   <h2 class="h2-home">
     Rapport de Stage
   </h2>
-  <a class="contact-link-home" href="/index.html#contact" title="Contact Me">
-    Contact Me
+  <a class="contact-link-home" href="/index.html#contact" title="Me contacter">
+    Me Contacter
   </a>
   </div>
   <br />
