--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="styling/styles.css" />
+  <link rel="stylesheet" href="styling/stylework.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -45,11 +45,8 @@
     <h2 class="h2-home">
       A compléter
     </h2>
-    <a class="contact-link-home" href="/contact.html" title="Me contacter">
-      Me contacter
-    </a>
   </div>
-  
+
   <br />
 
   <h3 class="h3-headers-home">
@@ -58,11 +55,15 @@
   <div class="line-under-headers">
     ________________________________________________________________________
   </div>
-  <p class="paragraph-about-me">
-    Le service et son contexte</br>
-    Détails de vos missions</br>
-    Quelques réalisations concrètes et illustrées</br>
-  </p>
+  <h5 class="h5">
+    Le service et son contexte
+  </h5>
+  <h5 class="h5">
+    Détails de mes missions
+  </h5>
+  <h5 class="h5">
+    Quelques réalisations concrètes et illustrées
+  </h5>
   <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="project-image-work col-6">
